Show NOI Decisions in Portal
* Add modules/controllers/ui
* Fix small typos
* Rename existing DTO to include Application

--- a/portal-frontend/src/app/features/notice-of-intents/view-submission/alc-review/alc-review.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/view-submission/alc-review/alc-review.component.html
@@ -21,6 +21,7 @@
       noiSubmission.status.code === NOI_SUBMISSION_STATUS.ALC_DECISION
     "
   >
+    <app-decisions [fileNumber]="noiSubmission.fileNumber"></app-decisions>
     <app-submission-documents [$noiDocuments]="$noiDocuments"></app-submission-documents>
   </div>
 </div>
