--- a/portal-frontend/src/app/features/notice-of-intents/view-submission/alc-review/submission-documents/submission-documents.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/view-submission/alc-review/submission-documents/submission-documents.component.html
@@ -1,4 +1,4 @@
-<h4>Application Documents</h4>
+<h4>Notice of Intent Documents</h4>
 <div class='table-container'>
   <table mat-table [dataSource]='dataSource' matSort class='mat-elevation-z3 documents'>
     <ng-container matColumnDef='type'>
