Decision Bug Fixes
* Rename Ag fields to full names
* Change padding on scroller to line buttons up with edges
* Fix ordering of INCL/EXCL components

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
@@ -49,7 +49,7 @@
         bindLabel="label"
         bindValue="value"
         required
-        placeholder="Ag Cap*"
+        placeholder="Agricultural Capability*"
         [clearable]="false"
       ></ng-select>
     </div>
@@ -63,19 +63,19 @@
         bindLabel="label"
         bindValue="value"
         required
-        placeholder="Ag Cap Source*"
+        placeholder="Agricultural Capability Source*"
         [clearable]="false"
       ></ng-select>
     </div>
 
     <mat-form-field appearance="outline">
-      <mat-label>Ag Cap Map</mat-label>
-      <input matInput matInput formControlName="agCapMap" />
+      <mat-label>Agricultural Capability Mapsheet Reference</mat-label>
+      <input matInput formControlName="agCapMap" />
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Ag Cap Consultant</mat-label>
-      <input matInput matInput formControlName="agCapConsultant" />
+      <mat-label>Agricultural Capability Consultant</mat-label>
+      <input matInput formControlName="agCapConsultant" />
     </mat-form-field>
   </div>
 </form>
