--- a/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-input-v2.component.scss
+++ b/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-input-v2.component.scss
@@ -7,7 +7,7 @@
   left: 240px;
   right: 0;
   background-color: #fff;
-  padding: 16px;
+  padding: 16px 94px 16px 48px;
   z-index: 2;
   border-top: 1px solid colors.$grey-light;
 
