--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/incl-excl-input/incl-excl-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/incl-excl-input/incl-excl-input.component.html
@@ -13,14 +13,6 @@
       />
     </mat-form-field>
 
-    <div>
-      <mat-label class="toggle-label">Applicant Type*</mat-label>
-      <mat-button-toggle-group required id="isFirstNation" formControlName="applicantType" name="isFirstNation">
-        <mat-button-toggle value="Land Owner">Land Owner</mat-button-toggle>
-        <mat-button-toggle value="L/FNG Initiated">L/FNG Initiated</mat-button-toggle>
-      </mat-button-toggle-group>
-    </div>
-
     <mat-form-field appearance="outline" class="date-picker">
       <mat-label>Expiry Date</mat-label>
       <input
@@ -33,5 +25,13 @@
       <mat-datepicker-toggle matSuffix [for]="expiryDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #expiryDatePicker type="date"></mat-datepicker>
     </mat-form-field>
+
+    <div class="full-width">
+      <mat-label class="toggle-label">Applicant Type*</mat-label>
+      <mat-button-toggle-group required id="isFirstNation" formControlName="applicantType" name="isFirstNation">
+        <mat-button-toggle value="Land Owner">Land Owner</mat-button-toggle>
+        <mat-button-toggle value="L/FNG Initiated">L/FNG Initiated</mat-button-toggle>
+      </mat-button-toggle-group>
+    </div>
   </div>
 </form>
