--- a/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
@@ -25,7 +25,7 @@
         bindLabel="label"
         bindValue="value"
         required
-        placeholder="Ag Cap*"
+        placeholder="Agricultural Capability*"
         [clearable]="false"
       ></ng-select>
     </div>
@@ -39,18 +39,18 @@
         bindLabel="label"
         bindValue="value"
         required
-        placeholder="Ag Cap Source*"
+        placeholder="Agricultural Capability Source*"
         [clearable]="false"
       ></ng-select>
     </div>
 
     <mat-form-field appearance="outline">
-      <mat-label>Ag Cap Map</mat-label>
+      <mat-label>Agricultural Capability Mapsheet Reference</mat-label>
       <input matInput formControlName="agCapMap" />
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Ag Cap Consultant</mat-label>
+      <mat-label>Agricultural Capability Consultant</mat-label>
       <input matInput formControlName="agCapConsultant" />
     </mat-form-field>
   </div>
