--- a/alcs-frontend/src/app/features/search/search.component.html
+++ b/alcs-frontend/src/app/features/search/search.component.html
@@ -6,7 +6,7 @@
   <h6 class="subheading">Provide one or more of the following criteria:</h6>
 </div>
 
-<form class="content" [formGroup]="createForm" (ngSubmit)="onSubmit()">
+<form class="content" [formGroup]="searchForm" (ngSubmit)="onSubmit()">
   <div class="search-fields-wrapper">
     <div class="row">
       <div class="column">
@@ -33,7 +33,7 @@
       </mat-form-field>
       <mat-form-field class="column" appearance="outline">
         <mat-label>Civic Address</mat-label>
-        <input id="fileNumber" matInput placeholder="Civic Address" formControlName="civicAddress" />
+        <input id="civicAddress" matInput placeholder="Civic Address" formControlName="civicAddress" />
       </mat-form-field>
     </div>
 
@@ -80,7 +80,7 @@
           <div class="column">
             <mat-form-field appearance="outline">
               <mat-label>Resolution Number</mat-label>
-              <input id="fileNumber" matInput formControlName="resolutionNumber" />
+              <input id="resolutionNumber" matInput formControlName="resolutionNumber" />
             </mat-form-field>
           </div>
           <div class="center">/</div>
@@ -129,7 +129,7 @@
             type="text"
             matInput
             formControlName="government"
-            placeholder="Type government"
+            placeholder="L/FNG Government"
             [matAutocomplete]="auto"
           />
           <mat-autocomplete (optionSelected)="onGovernmentChange($event)" #auto="matAutocomplete">
@@ -260,7 +260,7 @@
     <ng-container matColumnDef="dateSubmitted">
       <th mat-header-cell *matHeaderCellDef>Date Submitted</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.dateSubmitted }}
+        {{ element.dateSubmitted | date}}
       </td>
     </ng-container>
 
