Rename Application -> Notice of Intent

--- a/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/notice-of-intent-details.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/notice-of-intent-details.component.html
@@ -66,7 +66,7 @@
   <h3>Land Use</h3>
   <div *ngIf="submission" class="review-table">
     <div class="full-width">
-      <h4>Land Use of Parcel(s) under Application</h4>
+      <h4>Land Use of Parcel(s) under Notice of Intent</h4>
     </div>
     <div class="subheading2 grid-1">
       Quantify and describe in detail all agriculture that currently takes place on the parcel(s).
