--- a/alcs-frontend/src/app/features/search/search.component.html
+++ b/alcs-frontend/src/app/features/search/search.component.html
@@ -106,14 +106,17 @@
     <div class="row">
       <div class="column">
         <mat-form-field appearance="outline">
-          <mat-label>Portal Status</mat-label>
-          <input id="portalStatus" matInput formControlName="portalStatus" />
+          <mat-select placeholder="Portal Status" [formControl]="portalStatusControl">
+            <mat-option *ngFor="let status of statuses" [value]="status.code">
+              {{ status.label }}
+            </mat-option>
+          </mat-select>
         </mat-form-field>
       </div>
 
       <div class="column">
         <mat-form-field appearance="outline">
-          <mat-label>File Type</mat-label>
+          <mat-label>File Type (To be implemented)</mat-label>
           <input id="componentType" matInput formControlName="componentType" />
         </mat-form-field>
         <div class="subtext">Note: This field searches both proposal and decision component type</div>
@@ -232,42 +235,48 @@
 
   <mat-tab-group mat-align-tabs="start" mat-stretch-tabs="false">
     <mat-tab>
-      <ng-template mat-tab-label> Applications: {{ total }} </ng-template>
+      <ng-template mat-tab-label> Applications: {{ applicationsTotal }} </ng-template>
       <ng-container *ngTemplateOutlet="searchResultTable"></ng-container>
     </mat-tab>
 
     <mat-tab>
       <ng-template mat-tab-label> Notice of Intent: 0 </ng-template>
-      <ng-container *ngTemplateOutlet="searchResultTable"></ng-container>
     </mat-tab>
 
     <mat-tab>
       <ng-template mat-tab-label> Non-Applications: 0 </ng-template>
-      <ng-container *ngTemplateOutlet="searchResultTable"></ng-container>
     </mat-tab>
   </mat-tab-group>
 </div>
 
 <ng-template #searchResultTable>
-  <table mat-table [dataSource]="searchResults" class="mat-elevation-z2 table" matSort matSortActive="dateSubmitted" matSortDirection="desc" matSortDisableClear>
+  <table
+    mat-table
+    [dataSource]="searchResults"
+    class="mat-elevation-z2 table"
+    matSort
+    matSortActive="dateSubmitted"
+    matSortDirection="desc"
+    matSortDisableClear
+  >
     <ng-container matColumnDef="fileId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>File ID</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.fileNumber }}
+        {{ element.fileNumber | emptyColumn }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="dateSubmitted">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Submitted</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.dateSubmitted | date }}
+        {{ element.dateSubmitted | date | emptyColumn }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="ownerName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Owner Name</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.ownerName }}
+        {{ element.ownerName | emptyColumn }}
       </td>
     </ng-container>
 
@@ -276,13 +285,14 @@
       <td mat-cell class="type-cell" *matCellDef="let element">
         <app-application-type-pill *ngIf="element.type" [type]="element.type" [useShortLabel]="true">
         </app-application-type-pill>
+        <ng-container *ngIf="element.type === null || element.type === undefined">-</ng-container>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="government">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Local/First Nation Government</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.localGovernmentName }}
+        {{ element.localGovernmentName | emptyColumn }}
       </td>
     </ng-container>
 
@@ -307,7 +317,7 @@
     </tr>
   </table>
   <mat-paginator
-    [length]="total"
+    [length]="applicationsTotal"
     [pageSize]="20"
     [pageSizeOptions]="[20, 50, 100]"
     (page)="onPageChange($event)"
