Fix Edit Submission Updated banners
* Add special exception to local government uuid
* Pass original submission UUID to app-details so it can be used by parcels

--- a/portal-frontend/src/app/features/notice-of-intents/alcs-edit-submission/alcs-edit-submission.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/alcs-edit-submission/alcs-edit-submission.component.html
@@ -135,10 +135,12 @@
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === steps.ReviewAndSubmit">
       <app-review-and-submit
+        *ngIf="originalSubmission"
         [$noiSubmission]="$noiSubmission"
         [$noiDocuments]="$noiDocuments"
         [draftMode]="true"
         [updatedFields]="updatedFields"
+        [originalSubmissionUuid]="originalSubmission.uuid"
         (exit)="onExit()"
         (submit)="onSubmit()"
       ></app-review-and-submit>
