--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.html
@@ -49,7 +49,7 @@
 
   <ng-container matColumnDef="uploadedAt">
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by date">Upload Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.uploadedAt | date }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.uploadedAt | momentFormat }}</td>
   </ng-container>
 
   <ng-container matColumnDef="actions">
