--- a/alcs-frontend/src/app/shared/lots-table/lots-table-form.component.html
+++ b/alcs-frontend/src/app/shared/lots-table/lots-table-form.component.html
@@ -1,5 +1,5 @@
 <fieldset [formGroup]="form" class="lots-table">
-  <div class='first-field'>
+  <div class="first-field">
     <mat-form-field appearance="outline" class="date-picker">
       <mat-label>Total Number of Proposed Lots</mat-label>
       <input
@@ -20,12 +20,12 @@
     <label class="subheading2">Approved Lot Areas</label>
     <table mat-table [dataSource]="lotsSource">
       <ng-container matColumnDef="index">
-        <th mat-header-cell *matHeaderCellDef>#</th>
+        <th mat-header-cell *matHeaderCellDef class="subheading2">#</th>
         <td mat-cell *matCellDef="let i = index">{{ i + 1 }}</td>
       </ng-container>
 
       <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef>Type</th>
+        <th mat-header-cell *matHeaderCellDef class="subheading2">Type</th>
         <td mat-cell *matCellDef="let element; let i = index">
           <mat-form-field appearance="outline">
             <mat-select placeholder="Please select" formControlName="{{ i }}-lotType" (selectionChange)="fireChanged()">
@@ -37,7 +37,7 @@
       </ng-container>
 
       <ng-container matColumnDef="size">
-        <th mat-header-cell *matHeaderCellDef>Size (ha)*</th>
+        <th mat-header-cell *matHeaderCellDef class="subheading2">Size (ha)*</th>
         <td mat-cell *matCellDef="let element; let i = index">
           <mat-form-field appearance="outline">
             <input
@@ -56,7 +56,7 @@
       </ng-container>
 
       <ng-container matColumnDef="alrArea">
-        <th mat-header-cell *matHeaderCellDef>Alr Area (ha)*</th>
+        <th mat-header-cell *matHeaderCellDef class="subheading2">ALR Area (ha)*</th>
         <td mat-cell *matCellDef="let element; let i = index">
           <mat-form-field appearance="outline">
             <input
