call specific search on page change

--- a/alcs-frontend/src/app/features/search/search.component.scss
+++ b/alcs-frontend/src/app/features/search/search.component.scss
@@ -18,34 +18,36 @@ span {
   }
 }
 
-.table {
-  width: 100%;
-  margin-top: 12px;
+:host::ng-deep {
+  .table {
+    width: 100%;
+    margin-top: 12px;
 
-  td,
-  th {
-    font-size: 16px;
-    width: 25%;
-  }
+    td,
+    th {
+      font-size: 16px;
+      width: 25%;
+    }
 
-  .type-cell {
-    width: 90px;
-  }
+    .type-cell {
+      width: 90px;
+    }
 
-  tr.mdc-data-table__row:hover {
-    box-shadow: 0 0 0 2px rgba(colors.$primary-color, 0.9);
-    cursor: pointer;
-    transform: scale(1);
-  }
+    tr.mdc-data-table__row:hover {
+      box-shadow: 0 0 0 2px rgba(colors.$primary-color, 0.9);
+      cursor: pointer;
+      transform: scale(1);
+    }
 
-  tr.no-data {
-    border: none;
-    background-color: colors.$grey-light;
-    align-items: center;
-    justify-content: center;
-    cursor: auto;
-    box-shadow: none !important;
-    height: 32px;
+    tr.no-data {
+      border: none;
+      background-color: colors.$grey-light;
+      align-items: center;
+      justify-content: center;
+      cursor: auto;
+      box-shadow: none !important;
+      height: 32px;
+    }
   }
 }
 
