--- a/portal-frontend/src/app/features/notice-of-intents/alcs-edit-submission/remove-file-confirmation-dialog/remove-file-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/alcs-edit-submission/remove-file-confirmation-dialog/remove-file-confirmation-dialog.component.html
@@ -4,8 +4,15 @@
 
 <div mat-dialog-content class="content">
   <app-warning-banner>
-    <b>Warning:</b> This document will be immediately deleted from ALCS and the Portal and cannot be undone. To retain,
-    first download a copy from the Documents tab in ALCS then return to complete this action.
+    <div>
+      <b>Warning:</b> This document will be immediately deleted from ALCS and the Portal and cannot be undone. To retain
+      the document, first download a copy from the Documents tab in ALCS then return to complete this action.
+    </div>
+    <br />
+    <div>
+      To replace the document on the Submission: delete current, upload new, then update the submission (via Review &
+      Submit).
+    </div>
   </app-warning-banner>
 
   <div class="step-controls">
