--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/roso/roso-proposal.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/roso/roso-proposal.component.html
@@ -32,7 +32,7 @@
       <div>
         <mat-button-toggle-group
           class="input"
-          (valueChange)="onChangeIsFollowUp($event)"
+          (change)="onChangeIsFollowUp($event.value)"
           id="noi-follow-up"
           [formControl]="isFollowUp"
         >
@@ -201,7 +201,7 @@
       <div>
         <mat-button-toggle-group
           class="input"
-          (valueChange)="onChangeIsExtractionOrMining($event)"
+          (change)="onChangeIsExtractionOrMining($event.value)"
           id="noi-extraction-or-mining"
           [formControl]="isExtractionOrMining"
         >
@@ -275,9 +275,9 @@
       <div>
         <mat-button-toggle-group
           class="input"
-          (valueChange)="onChangeNoticeOfWork($event)"
+          (change)="onChangeNoticeOfWork($event.value)"
           id="hasSubmittedNotice"
-          formControlName="hasSubmittedNotice"
+          [formControl]="hasSubmittedNotice"
         >
           <mat-button-toggle
             class="toggle-button"
