--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
@@ -32,7 +32,7 @@
       <div>
         <mat-button-toggle-group
           class="input"
-          (valueChange)="onChangeIsFollowUp($event)"
+          (change)="onChangeIsFollowUp($event.value)"
           id="noi-follow-up"
           [formControl]="isFollowUp"
         >
@@ -351,7 +351,7 @@
       <div>
         <mat-button-toggle-group
           class="input"
-          (valueChange)="onChangeMiningExtraction($event)"
+          (change)="onChangeMiningExtraction($event.value)"
           id="isExtractionOrMining"
           formControlName="isExtractionOrMining"
         >
@@ -385,7 +385,7 @@
       <div>
         <mat-button-toggle-group
           class="input"
-          (valueChange)="onChangeNoticeOfWork($event)"
+          (change)="onChangeNoticeOfWork($event.value)"
           id="hasSubmittedNotice"
           formControlName="hasSubmittedNotice"
         >
