--- a/portal-frontend/src/app/features/applications/review-submission/review-submission.component.html
+++ b/portal-frontend/src/app/features/applications/review-submission/review-submission.component.html
@@ -93,7 +93,10 @@
   <cdk-step label="Resolution">
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === reviewAppFngSteps.Resolution">
-      <app-review-resolution (navigateToStep)="onBeforeSwitchStep($event)"></app-review-resolution>
+      <app-review-resolution
+        (navigateToStep)="onBeforeSwitchStep($event)"
+        [showErrors]="showValidationErrors"
+      ></app-review-resolution>
     </div>
   </cdk-step>
   <cdk-step label="Attachments">
