Change L/FNG Review to only call save when components are dirty
* Also don't reload application / documents / etc when changing steps

--- a/portal-frontend/src/app/features/applications/review-submission/review-contact-information/review-contact-information.component.html
+++ b/portal-frontend/src/app/features/applications/review-submission/review-contact-information/review-contact-information.component.html
@@ -70,6 +70,7 @@
               placeholder="Type phone number"
               formControlName="phoneNumber"
               mask="(000) 000-0000"
+              type="tel"
             />
           </mat-form-field>
           <div *ngIf="phoneNumber.invalid && (phoneNumber.dirty || phoneNumber.touched)" class="field-error">
