--- a/alcs-frontend/src/app/features/search/non-application-search-table/non-application-search-table.component.html
+++ b/alcs-frontend/src/app/features/search/non-application-search-table/non-application-search-table.component.html
@@ -18,7 +18,7 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
 
     <td mat-cell *matCellDef="let element">
-      <app-application-type-pill [useShortLabel]="true" *ngIf="element.class === 'PLN'" [type]="PLANNING_TYPE_LABEL" />
+      <app-application-type-pill [useShortLabel]="true" *ngIf="element.class === 'PLAN'" [type]="PLANNING_TYPE_LABEL" />
       <app-application-type-pill [useShortLabel]="true" *ngIf="element.class === 'COV'" [type]="COVENANT_TYPE_LABEL" />
     </td>
   </ng-container>
