Add SRWs / Notifications
* Rename AppParcelType => ParcelType and share across all 3
* Add lots of SRW stuff

--- a/portal-frontend/src/app/features/create-submission-dialog/create-submission-dialog.component.html
+++ b/portal-frontend/src/app/features/create-submission-dialog/create-submission-dialog.component.html
@@ -10,7 +10,11 @@
     <ng-container *ngIf="currentStep === steps.submissionType">
       <div class="step-description">Select an option to learn more about the submission type.</div>
       <div class="step-submission-type">
-        <mat-radio-group [value]="selectedSubmissionType?.code" (change)="onSubmissionTypeSelected($event)" color="primary">
+        <mat-radio-group
+          [value]="selectedSubmissionType?.code"
+          (change)="onSubmissionTypeSelected($event)"
+          color="primary"
+        >
           <mat-radio-button
             *ngFor="let subType of submissionTypes"
             [value]="subType.code"
@@ -103,6 +107,48 @@
     <ng-container *ngIf="currentStep === steps.prescribedBody">
       <app-presribed-body (select)="onSelectPrescribedBody($event)"></app-presribed-body>
     </ng-container>
+    <ng-container *ngIf="currentStep === steps.srwType">
+      <div class="step-description">
+        Submitting a notification of Statutory Right of Way (SRW) only applies to a SRW described in
+        <a href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/96250_00_multi#section218"
+          >s. 218 of the Land Title Act.</a
+        >
+      </div>
+      <div id="warningBanner" class="warning-banner">
+        <div>
+          <b class="app-type-label radio-option">Before you create a notification of SRW:</b>
+        </div>
+        <div class="typeDescription" [ngClass]="{ 'ellipsis-3': !readMoreClicked }">
+          <ol class="srw-list">
+            <li>
+              Permitted Uses: If you intend to use, construct works, or remove soil or place fill (including gravel)
+              within the SRW beyond what is permitted in the ALR Use Regulation, application or notice of intent to the
+              ALC is required. Creating a notification of SRW in no way constitutes such an approval.
+            </li>
+            <li>
+              ALC Decision Condition Compliance: This notification of SRW is not meant to submit or confirm ALC decision
+              condition compliance (e.g. subdivision plan), please refer back to the ALC decision letter for
+              instructions.
+            </li>
+            <li>
+              Submitting a Notification of SRW: Ensure that you are ready to submit your SRW package to the Land Title
+              Survey Authority and all necessary documents including the ‘Terms of SRW’ and survey plan (if any) have
+              been signed and finalized. You will not be able to submit this notification of SRW to the ALC without
+              attaching the finalized Terms of SRW.
+            </li>
+          </ol>
+          The ALC's automatically generated notification response will need to be attached as a supporting document to
+          your Land Title Survey Authority SRW package.
+          <br /><br />
+          If you have any questions, please contact the ALC.<br />
+          Email: <a href="mailto:ALC.Portal@gov.bc.ca">ALC.Portal@gov.bc.ca</a> <br />
+          Phone: <a href="tel:236-468-3342">236-468-3342</a> or <a href="tel:1-800-663-7867">1-800-663-7867</a>
+        </div>
+        <span class="read-more-btn" [ngClass]="{ 'display-none': !isReadMoreVisible }" (click)="onReadMoreClicked()"
+          ><u>Read {{ readMoreClicked ? 'Less' : 'More' }}</u></span
+        >
+      </div>
+    </ng-container>
   </div>
 </div>
 
@@ -124,6 +170,10 @@
       <ng-container *ngIf="selectedAppType?.code === 'EXCL'">next</ng-container>
       <ng-container *ngIf="selectedAppType?.code !== 'EXCL'">create</ng-container>
     </button>
+  </div>
+  <div class="dialog-controls-wrapper" *ngIf="currentStep === steps.srwType">
+    <button mat-stroked-button color="primary" (click)="onStepChange(steps.submissionType)">Back</button>
+    <button mat-flat-button color="primary" (click)="onSubmitSrw()" [disabled]="!selectedSubmissionType">create</button>
   </div>
   <div class="dialog-controls-wrapper" *ngIf="currentStep === steps.noticeOfIntentType">
     <button mat-stroked-button color="primary" (click)="onStepChange(steps.submissionType)">Back</button>
