Add Notification Parcel UI
* Cleanup isDraft flag since not needed for Notifications
* Merge modules for the same reason
* Delete unused parcel fields

--- a/portal-frontend/src/app/features/notifications/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/edit-submission.component.html
@@ -31,7 +31,15 @@
 >
   <cdk-step label="Parcel Details">
     <ng-container *ngTemplateOutlet="header"></ng-container>
-    <div *ngIf="cdkStepper.selectedIndex === steps.Parcel"></div>
+    <div *ngIf="cdkStepper.selectedIndex === steps.Parcel">
+      <app-notification-parcel-details
+        [$notificationSubmission]='$notificationSubmission'
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="switchStep($event)"
+        (componentInitialized)="onParcelDetailsInitialized()"
+        (exit)="onExit()">
+      </app-notification-parcel-details>
+    </div>
   </cdk-step>
   <cdk-step label="Identify Transferees">
     <ng-container *ngTemplateOutlet="header"></ng-container>
