Pass status service as detail header input

--- a/alcs-frontend/src/app/features/application/application.component.html
+++ b/alcs-frontend/src/app/features/application/application.component.html
@@ -7,6 +7,7 @@
       days="Business Days"
       heading="Application"
       [showStatus]="true"
+      [submissionStatusService]="applicationStatusService"
     ></app-details-header>
     <div class="content">
       <div *ngIf="showSubmittedToAlcMenuItems" class="nav">
