--- a/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
@@ -3,11 +3,11 @@
     <app-details-header
       heading="Notice of Intent"
       [application]="noticeOfIntent"
-      [parentType]="PARENT_TYPES.NOTICE_OF_INTENT"
       [reconsiderations]="[]"
       [modifications]="modifications"
       days="Calendar Days"
       [showStatus]="true"
+      [submissionStatusService]="noticeOfIntentStatusService"
     ></app-details-header>
     <div class="content">
       <div class="nav">
