Add NOI timeline and status to detailed page (#939)
* Fetch NOI submission status from overview page

* Bold noi timeline statuses and update unit tests

* Retrieve current noi status and show badge in details header

* Refactor and pass unit test

* Pass status service as detail header input

--- a/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
@@ -6,6 +6,8 @@
       [reconsiderations]="[]"
       [modifications]="modifications"
       days="Calendar Days"
+      [showStatus]="true"
+      [submissionStatusService]="noticeOfIntentStatusService"
     ></app-details-header>
     <div class="content">
       <div class="nav">
