Add Notification Statuses
* Add statuses to notifications

--- a/portal-frontend/src/app/features/notifications/view-submission/view-notification-submission.component.html
+++ b/portal-frontend/src/app/features/notifications/view-submission/view-notification-submission.component.html
@@ -9,7 +9,7 @@
     </div>
     <div>
       <div class="subheading2">SRW Status</div>
-      <span *ngIf="submission">TODO</span>
+      <span *ngIf="submission">{{ submission.status.label }}</span>
     </div>
   </div>
 </div>
@@ -24,7 +24,7 @@
     </div>
     <div>
       <div class="subheading2">SRW Status</div>
-      <span *ngIf="submission">TODO</span>
+      <span *ngIf="submission">{{ submission.status.label }}</span>
     </div>
   </div>
 </div>
