--- a/portal-frontend/src/app/features/notifications/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/edit-submission.component.html
@@ -1,6 +1,8 @@
 <ng-template #header>
   <div class="header">
-    <h6 *ngIf="notificationSubmission">Notice of Intent ID: {{ notificationSubmission.fileNumber }} | {{ notificationSubmission.type }}</h6>
+    <h6 *ngIf="notificationSubmission">
+      Notification ID: {{ notificationSubmission.fileNumber }} | {{ notificationSubmission.type }}
+    </h6>
     <div class="header-btn-wrapper">
       <button
         *ngIf="notificationSubmission?.fileNumber && cdkStepper.selectedIndex === steps.ReviewAndSubmit"
@@ -10,15 +12,6 @@
       >
         Download PDF
       </button>
-      <div class="change-app-type-btn-wrapper">
-        <button mat-flat-button color="accent" (click)="onChangeSubmissionType()">Change SRW Type</button>
-        <mat-icon
-          color="accent"
-          matTooltip="Changing application type will remove some inputs from your saved progress"
-        >
-          help_outline
-        </mat-icon>
-      </div>
     </div>
   </div>
 </ng-template>
@@ -33,17 +26,26 @@
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === steps.Parcel">
       <app-notification-parcel-details
-        [$notificationSubmission]='$notificationSubmission'
+        [$notificationSubmission]="$notificationSubmission"
         [showErrors]="showValidationErrors"
         (navigateToStep)="switchStep($event)"
         (componentInitialized)="onParcelDetailsInitialized()"
-        (exit)="onExit()">
+        (exit)="onExit()"
+      >
       </app-notification-parcel-details>
     </div>
   </cdk-step>
   <cdk-step label="Identify Transferees">
     <ng-container *ngTemplateOutlet="header"></ng-container>
-    <div *ngIf="cdkStepper.selectedIndex === steps.Transferees"></div>
+    <div *ngIf="cdkStepper.selectedIndex === steps.Transferees">
+      <app-transferees
+        [$notificationSubmission]="$notificationSubmission"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="switchStep($event)"
+        (exit)="onExit()"
+      >
+      </app-transferees>
+    </div>
   </cdk-step>
   <cdk-step label="Primary Contact">
     <ng-container *ngTemplateOutlet="header"></ng-container>
