--- a/portal-frontend/src/styles.scss
+++ b/portal-frontend/src/styles.scss
@@ -48,6 +48,13 @@ a {
   align-items: center;
 }
 
+.split {
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .no-padding .mat-dialog-container {
   padding: 0;
 }
