--- a/alcs-frontend/src/app/features/search/non-application-search-table/non-application-search-table.component.html
+++ b/alcs-frontend/src/app/features/search/non-application-search-table/non-application-search-table.component.html
@@ -42,7 +42,7 @@
 
   <tr class="mat-row no-data" *matNoDataRow>
     <td class="text-center" colspan="4">
-      <div><b>No Search results.</b></div>
+      <div><b>No non-applications found.</b></div>
       <div>Please adjust criteria and try again.</div>
     </td>
   </tr>
