--- a/alcs-frontend/src/app/features/search/notice-of-intent-search-table/notice-of-intent-search-table.component.html
+++ b/alcs-frontend/src/app/features/search/notice-of-intent-search-table/notice-of-intent-search-table.component.html
@@ -59,7 +59,7 @@
 
   <tr class="mat-row no-data" *matNoDataRow>
     <td class="text-center" colspan="6">
-      <div><b>No Search results.</b></div>
+      <div><b>No notice of intent found.</b></div>
       <div>Please adjust criteria and try again.</div>
     </td>
   </tr>
