--- a/portal-frontend/src/app/features/notifications/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/edit-submission.component.html
@@ -49,11 +49,27 @@
   </cdk-step>
   <cdk-step label="Primary Contact">
     <ng-container *ngTemplateOutlet="header"></ng-container>
-    <div *ngIf="cdkStepper.selectedIndex === steps.PrimaryContact"></div>
+    <div *ngIf="cdkStepper.selectedIndex === steps.PrimaryContact">
+      <app-primary-contact
+        [$notificationSubmission]="$notificationSubmission"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="switchStep($event)"
+        (exit)="onExit()"
+      >
+      </app-primary-contact>
+    </div>
   </cdk-step>
   <cdk-step label="Government">
     <ng-container *ngTemplateOutlet="header"></ng-container>
-    <div *ngIf="cdkStepper.selectedIndex === steps.Government"></div>
+    <div *ngIf="cdkStepper.selectedIndex === steps.Government">
+      <app-select-government
+        [$notificationSubmission]="$notificationSubmission"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="switchStep($event)"
+        (exit)="onExit()"
+      >
+      </app-select-government>
+    </div>
   </cdk-step>
   <cdk-step label="Purpose of SRW">
     <ng-container *ngTemplateOutlet="header"></ng-container>
